made handling of URLs more robust to cope with differences between 1.6.0_21 and _22